@@ -16,12 +16,12 @@ RM_DIR=rmdir -p --ignore-fail-on-non-empty
 
 DESTDIR ?=
 PREFIX ?= /usr/local
-ETCDIR=/etc/x2go
-BINDIR=$(PREFIX)/bin
-SBINDIR=$(PREFIX)/sbin
-LIBDIR=$(PREFIX)/lib/x2go
-MANDIR=$(PREFIX)/share/man
-SHAREDIR=$(PREFIX)/share/x2go
+ETCDIR ?= /etc/x2go
+BINDIR ?= $(PREFIX)/bin
+SBINDIR ?= $(PREFIX)/sbin
+LIBDIR ?= $(PREFIX)/lib/x2go
+MANDIR ?= $(PREFIX)/share/man
+SHAREDIR ?= $(PREFIX)/share/x2go
 
 #BIN_SCRIPTS=$(shell cd bin && echo *)
 #SBIN_SCRIPTS=$(shell cd sbin && echo *)
